--- a/helm/pihole/Makefile
+++ b/helm/pihole/Makefile
@@ -6,3 +6,6 @@ install:
 uninstall:
 	helm uninstall pihole --namespace pihole
 	kubectl delete ns pihole
+.PHONY: update
+update:
+	helm upgrade pihole mojo2600/pihole --values pihole.yaml --namespace pihole
