--- a/helm/pihole/pihole.yaml
+++ b/helm/pihole/pihole.yaml
@@ -237,12 +237,12 @@ topologySpreadConstraints: []
 affinity: {}
 
 # -- Administrator password when not using an existing secret (see below)
-adminPassword: ${PIHOLE_PSWD}
+adminPassword: "password"
 
 # -- Use an existing secret for the admin password.
 admin:
   # -- Specify an existing secret to use as admin password
-  existingSecret: ""
+  existingSecret: "pihole"
   # -- Specify the key inside the secret to use
   passwordKey: "password"
 
