--- a/helm/pihole/Makefile
+++ b/helm/pihole/Makefile
@@ -1,6 +1,8 @@
 .PHONY: install
 install: 
 	kubectl create ns pihole
+	echo ${PIHOLE_PSWD} | base64 | xargs -I {} sed -i 's/replaceme/{}/g' secret.yaml
+	kubectl apply -f secret.yaml
 	helm install pihole mojo2600/pihole --values pihole.yaml --namespace pihole
 .PHONY: uninstall
 uninstall:
@@ -9,3 +11,7 @@ uninstall:
 .PHONY: update
 update:
 	helm upgrade pihole mojo2600/pihole --values pihole.yaml --namespace pihole
+.PHONY: helm-add
+helm-add:
+	helm repo add mojo2600 https://mojo2600.github.io/pihole-kubernetes/
+	helm repo update
